# bout-tools

./: .gitignore  LICENSE  README.md
.github/workflows/: grid-diagnostics-tests.yml
bout_tokamak_grid/: README.md  bout_tokamak_grid_generator.py
bout_tokamak_grid/examples/: README.md
bout_tokamak_grid_diagnostics/: CITATION.cff  README.md  bout_tokamak_grid_diagnostics.py  pyproject.toml  requirements.txt
bout_tokamak_grid_diagnostics/examples/: README.md
bout_tokamak_grid_diagnostics/examples/d3d_119919.nc/: d3d_119919_report.html  d3d_119919_report.json
bout_tokamak_grid_diagnostics/examples/expected_nonorthogonal.grd.nc/: expected_nonorthogonal.grd_report.html  expected_nonorthogonal.grd_report.json
bout_tokamak_grid_diagnostics/examples/expected_orthogonal.grd.nc/: expected_orthogonal.grd_report.html  expected_orthogonal.grd_report.json
bout_tokamak_grid_diagnostics/examples/grid_circular_reference.nc/: grid_circular_reference_report.html  grid_circular_reference_report.json
bout_tokamak_grid_diagnostics/examples/grid_extreme_k2.2_d0.5.nc/: grid_extreme_k2.2_d0.5_report.html  grid_extreme_k2.2_d0.5_report.json
bout_tokamak_grid_diagnostics/examples/grid_iterish_k1.7_d0.33.nc/: grid_iterish_k1.7_d0.33_report.html  grid_iterish_k1.7_d0.33_report.json
bout_tokamak_grid_diagnostics/tests/: README.md  conftest.py  regenerate_fixtures.py  test_cli.py
bout_tokamak_grid_diagnostics/tests/data/grids/: grid_tiny_bad_J_signflip.nc  grid_tiny_bad_g11_nan.nc  grid_tiny_shaped.nc
